test/CheckError/Move/MoveNonMovableTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
void moveObject(T object) {
	// CHECK: .loci:7:16: error: cannot find method '__move' for type 'T'
	unused_result move object;
}

// CHECK: 2 errors generated.
